Log error for exceptions getting default values. Use List.copyOf()